--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>술술구구</title>
+    <script src='colorList.js'></script>
+    <script src='js/SulSulFrame.js'></script>
+    
 </head>
 <body>
     <script>
